[package]
name = "ovlive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["tracing", "ws", "headers"] }
csv = "1.2.1"
flate2 = "1.0.26"
nom = "7.1.3"
pretty_env_logger = "0.4.0"
quick-xml = { version = "0.28.2", features = ["overlapped-lists", "serialize"] }
rijksdriehoek = "0.1.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.0", features = ["tracing", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
zeromq = "0.3.3"
